--- a/canpi-web-app-ssr/templates/index.html
+++ b/canpi-web-app-ssr/templates/index.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>XYZ Bank Web site</title>
-</head>
-
-<body>
-    <h1>Welcome {{ name }}, to XYZ bank home page!</h1>
+{% extends "base.html" %}
+{% block title%}Index{% endblock title %}
+{% block head %}
+    {{ super() }}
+{% endblock head %}
+{% block content %}
+    <h1>Welcome to {{ hostname }} layout</h1>
     <p>This is an example of a dynamic web page served with Actix and Tera templates.</p>
-</body>
-
-</html>
+{% endblock content %}
