Server running and two out of three web pages display

--- a/canpi-web-app-ssr/templates/base.html
+++ b/canpi-web-app-ssr/templates/base.html
@@ -11,7 +11,7 @@
     <div id="content">{% block content %}{% endblock content %}</div>
     <div id="footer">
         {% block footer %}
-        &copy; Copyright 2021 by <a href="http://domain.invalid/">you</a>
+        &copy; Copyright 2022 by <a href="mailto:cornwall@merg.org.uk">MERG Cornwall AG</a>
         {% endblock footer %}
     </div>
 </body>
