--- a/canpi-web-app-ssr/templates/index.html
+++ b/canpi-web-app-ssr/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title%}Index{% endblock title %}
+{% block title%}Status{% endblock title %}
 {% block head %}
     {{ super() }}
 {% endblock head %}
 {% block content %}
-    <h1>Welcome to {{ hostname }} layout</h1>
+    <h1>Welcome to {{ layout_name }} layout</h1>
     <p>This is an example of a dynamic web page served with Actix and Tera templates.</p>
 {% endblock content %}
