--- a/canpi-web-app-ssr/templates/base.html
+++ b/canpi-web-app-ssr/templates/base.html
@@ -2,37 +2,43 @@
 <html lang="en">
 <head>
     {% block head %}
-    <link rel="stylesheet" href="../static/canpi.css"/>
+    <link rel="stylesheet" href="../static/canpigrid.css"/>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock title %} - CANPi Server</title>
     {% endblock head %}
 </head>
 <body>
-<header>
+<div class="grid-container">
+<div class="item1">
+    <div class="merglogo">
+    <img src="../static/merg_logo.png" alt="MERG Logo" width="140" height="55"><br>
+    </div>
+    <div class="rpilogo">
+    <img src="../static/rpi.jpg" alt="Raspberry Pi Logo" width="70" height="62">
+    </div>
+    <br>
     <h1>CANPi Server</h1>
-</header>
-<div class="container">
-<aside class="sidebar">
+</div>
+<div class="item2">
     {% block menu %}
-    <ul class="menu">
+    <ul>
         <li><a href="/">Home</a></li>
         <li><a href="static">Files</a></li>
         <li><a href="config">Configuration</a></li>
     </ul>
     {% endblock menu %}
-</aside>
-<main class="content">
-    <div class="content">{% block content %}{% endblock content %}</div>
-</main>
 </div>
-<footer>
+<div class="item3">
+    <div>{% block content %}{% endblock content %}</div>
+</div>
+<div class="item4">
     {% block footer %}
     <p>
-        <img src="../static/merg_logo.png" alt="MERG Logo" width="140" height="55"><br>
         &copy; Copyright 2022 by
         <a href="https://www.merg.org.uk/contactus.php">Model Electronic Railway Group</a>
     </p>
     {% endblock footer %}
-</footer>
+</div>
+</div>
 </body>
 </html>
