--- a/canpi-web-app-ssr/templates/list_config.html
+++ b/canpi-web-app-ssr/templates/list_config.html
@@ -7,8 +7,9 @@
     {{ super() }}
 {% endblock menu %}
 {% block content %}
-<div style="margin-left: 25%;padding: 1px 16px;height: 1000px;">
-    <h1>{{ layout_name}} Configuration</h1>
+<div>
+    <h2>{{ layout_name }}</h2>
+    <h3>CANPi Configuration</h3>
     <ul>
         {% for key, value in configuration %}
         <li>
