--- a/canpi-web-app-ssr/templates/index.html
+++ b/canpi-web-app-ssr/templates/index.html
@@ -2,40 +2,12 @@
 {% block title%}Status{% endblock title %}
 {% block head %}
     {{ super() }}
-<style>
-    body {
-        margin:0;
-    }
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        width: 25%;
-        background-color: #f1f1f1;
-        position: fixed;
-        height: 100%;
-        overflow: auto;
-    }
-    li a {
-        display:block;
-        color: #000000;
-        padding: 8px 16px;
-        text-decoration: none;
-    }
-    li a.active {
-        background-color: #04aa6d;
-        color: white;
-    }
-    li a:hover:not(a.active) {
-        background-color: #555;
-    }
-</style>
 {% endblock head %}
 {% block menu %}
     {{ super() }}
 {% endblock menu %}
 {% block content %}
-<div style="margin-left: 25%;padding: 1px 16px;height: 1000px;">
+<div>
     <h1>Welcome to {{ layout_name }} layout</h1>
     <p>This is an example of a dynamic web page served with Actix and Tera templates.</p>
 </div>
