--- a/canpi-web-app-ssr/templates/base.html
+++ b/canpi-web-app-ssr/templates/base.html
@@ -14,7 +14,7 @@
     <img src="../static/merg_logo.png" alt="MERG Logo" width="140" height="55"><br>
     </div>
     <div class="rpilogo">
-    <img src="../static/rpi.jpg" alt="Raspberry Pi Logo" width="70" height="62">
+    <img src="../static/rpi.png" alt="Raspberry Pi Logo" width="70" height="90">
     </div>
     <br>
     <h1>CANPi Server</h1>
