Switch from HashMap to BTreeMap. Added edit page (display only atm).

--- a/canpi-web-app-ssr/templates/base.html
+++ b/canpi-web-app-ssr/templates/base.html
@@ -21,8 +21,8 @@
         {% block menu %}
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="static">Files</a></li>
-            <li><a href="config">Configuration</a></li>
+            <li><a href="display">Display Only</a></li>
+            <li><a href="edit">Editable</a></li>
         </ul>
         {% endblock menu %}
     </div>
