--- a/canpi-web-app-ssr/templates/base.html
+++ b/canpi-web-app-ssr/templates/base.html
@@ -20,9 +20,9 @@
     <div class="item2">
         {% block menu %}
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="display">Display Only</a></li>
-            <li><a href="edit">Editable</a></li>
+            <li><a href="/canpi">Home</a></li>
+            <li><a href="/canpi/display">Display Only</a></li>
+            <li><a href="/canpi/edit">Editable</a></li>
         </ul>
         {% endblock menu %}
     </div>
