w-i-p adding autohs pages

--- a/canpi-web-app-ssr/templates/autohs_display.html
+++ b/canpi-web-app-ssr/templates/autohs_display.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "autohs_index.html" %}
 {% block title%}Configuration{% endblock title %}
 {% block head %}
 {{ super() }}
@@ -9,7 +9,7 @@
 {% block content %}
 <div>
     <h2>{{ layout_name }}</h2>
-    <h3>CANPi Configuration</h3>
+    <h3>Network Configuration</h3>
     <table id="attributes">
         <tr>
             <th>Name</th>
