--- a/canpi-web-app-ssr/templates/autohs_index.html
+++ b/canpi-web-app-ssr/templates/autohs_index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title%}Status{% endblock title %}
+{% block title%}Auto Hotspot{% endblock title %}
 {% block head %}
     {{ super() }}
 {% endblock head %}
 {% block menu %}
-<li><a href="/layout/autohs">Configure Wireless Access Point</a></li>
-<li><a href="/layout/canpi">Configure CANPiZero</a></li>
+<li><a href="/layout/autohs/display">Display</a></li>
+<li><a href="/layout/autohs/edit">Edit</a></li>
 {% endblock menu %}
 {% block content %}
 <div>
