--- a/canpi-web-app-ssr/templates/canpi_edit.html
+++ b/canpi-web-app-ssr/templates/canpi_edit.html
@@ -1,5 +1,5 @@
 {% extends "canpi_index.html" %}
-{% block title%}Configuration{% endblock title %}
+{% block title %}Configuration{% endblock title %}
 {% block head %}
 {{ super() }}
 {% endblock head %}
@@ -7,19 +7,22 @@
 {{ super() }}
 {% endblock menu %}
 {% block content %}
-    <h2>{{ layout_name }}</h2>
-    <h3>CANPi Configuration</h3>
-    <form action='{{ scope_for(scope="cupdate") }}' method="post">
-        {% for attr in configuration %}
-        <label for={{attr.name}}>{{attr.prompt}}:</label>
-        <input type="text" id={{attr.name}} name={{attr.name}} pattern="{{attr.format}}" title="{{attr.tooltip}} ({{attr.format}})"
-               value={{attr.value}}>
-        <br>
-        {% endfor %}
-        <button type="button" onClick='location.replace("{{ scope_for(scope="cedit") }}")'>Cancel</button>
-        <button type="submit">Submit</button>
-    </form>
-    <p>This is an example of a dynamic web page served with Actix and Tera templates.</p>
+<h2>{{ layout_name }}</h2>
+<h3>Edit CANPi Attribute</h3>
+{% for attr in configuration %}
+        <form action='{{ scope_for(scope="cupdate") }}' method="post">
+            <label for="{{attr.name}}-value">{{attr.prompt}}:</label>
+            <input type="text" id="{{attr.name}}-value" name="value" pattern="{{attr.format}}"
+                   title="{{attr.tooltip}} ({{attr.format}})"
+                   value={{attr.value}}>
+            <input type="hidden" id="{{attr.name}}-name" name="name" value={{attr.name}}>
+            <input type="hidden" id="{{attr.name}}-prompt" name="prompt" value="{{attr.prompt}}">
+            <br>
+            <input type="button" onclick='location.replace("{{ scope_for(scope="cdisplay") }}")' value="Cancel">
+            <input type="submit" value="Update">
+        </form>
+{% endfor %}
+<p>This is an example of a dynamic web page served with Actix and Tera templates.</p>
 {% endblock content %}
 {% block footer %}
 {{ super() }}
