--- a/canpi-web-app-ssr/templates/autohs_display.html
+++ b/canpi-web-app-ssr/templates/autohs_display.html
@@ -1,5 +1,5 @@
 {% extends "autohs_index.html" %}
-{% block title%}Configuration{% endblock title %}
+{% block title %}Configuration{% endblock title %}
 {% block head %}
 {{ super() }}
 {% endblock head %}
@@ -14,20 +14,34 @@
         <tr>
             <th>Name</th>
             <th>Value</th>
+            <th>Type</th>
         </tr>
         {% for attr in configuration %}
         <tr>
             <td>
+                {% if attr.editable %}
                 <div class="tooltip">
+                {% endif %}
                     {{attr.prompt}}
+                {% if attr.editable %}
                     <span class="tooltiptext">{{attr.tooltip}}</span>
                 </div>
+                {% endif %}
             </td>
             <td>{{attr.value}}</td>
+            <td>
+                {% if attr.editable %}
+                    <form action='{{ scope_for(scope="aedit") }}' method="get">
+                    <input type="hidden" id="{{attr.name}}" name="name" value={{attr.name}}>
+                    <input type="submit" value="Edit">
+                    </form>
+                {% else %}
+                    (view only)
+                {% endif %}
+            </td>
         </tr>
         {% endfor %}
     </table>
-    <p>This is an example of a dynamic web page served with Actix and Tera templates.</p>
 </div>
 {% endblock content %}
 {% block footer %}
