--- a/canpi-web-app-ssr/templates/base.html
+++ b/canpi-web-app-ssr/templates/base.html
@@ -36,6 +36,7 @@
     <div class="item4">
         {% block footer %}
         <p>
+            This is an example of a dynamic web page served with Actix using Tera templates.
             <br>
             &copy; Copyright {{ now() | date(format="%Y") }} by
             <a href="https://www.merg.org.uk/contactus.php">Model Electronic Railway Group</a>
