--- a/canpi-web-app-ssr/templates/autohs_save.html
+++ b/canpi-web-app-ssr/templates/autohs_save.html
@@ -1,4 +1,4 @@
-{% extends "canpi_index.html" %}
+{% extends "autohs_index.html" %}
 {% block title %}Configuration{% endblock title %}
 {% block head %}
 {{ super() }}
@@ -9,18 +9,10 @@
 {% block content %}
 <div>
 <h2>{{ layout_name }}</h2>
-<h3>Updated CANPi Attribute</h3>
-    <table id="attributes">
-        <tr>
-            <th>Name</th>
-            <th>Value</th>
-        </tr>
-        <tr>
-            <td>{{attr_prompt}}</td>
-            <td>{{current_value}}</td>
-        </tr>
-    </table>
-    <form action='{{ scope_for(scope="cdisplay") }}' method="get">
+<h3>AUTOHS Definition File Status</h3>
+    {{ status }}
+    <br>
+    <form action='{{ scope_for(scope="adisplay") }}' method="get">
         <button type="submit" value="Submit">Continue</button>
     </form>
 </div>
